# dss-provisioner

./: .gitignore  NOTICE  README.md  justfile  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  chore.yml  feature.yml
.github/actions/setup-docs/: action.yml
.github/actions/setup-python-uv/: action.yml
.github/workflows/: ci.yml  docs.yml
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/concepts/: index.html
dev/concepts/architecture/: index.html
dev/concepts/configuration/: index.html
dev/concepts/resources/: index.html
dev/guides/: index.html
dev/guides/examples/: index.html
dev/guides/installation/: index.html
dev/guides/modules/: index.html
dev/guides/python-api/: index.html
dev/guides/yaml-config/: index.html
dev/quickstart/: index.html
dev/reference/: index.html
dev/reference/api/: index.html
dev/reference/cli/: index.html
dev/reference/resources/: index.html
dev/search/: search_index.json
docs/: index.md  quickstart.md
docs/concepts/: architecture.md  configuration.md  index.md  resources.md
docs/guides/: examples.md  index.md  installation.md  modules.md  python-api.md  yaml-config.md
docs/reference/: api.md  cli.md  index.md  resources.md
examples/: README.md  notebook_test.py
examples/enterprise/: README.md  dss-provisioner-sharing.yaml  dss-provisioner.yaml
examples/enterprise/modules/: enterprise.py
examples/enterprise/recipes/: enrich_customers.py  qa_checks.sql
examples/enterprise/scenarios/: ops_watchdog.py
examples/free/: README.md  dss-provisioner.yaml
examples/free/modules/: pipelines.py
examples/free/recipes/: clean_customers.py  customers_quality.py  customers_quality.sql
examples/free/scenarios/: smoke_tests.py
examples/modules/: README.md
examples/modules/multi-instance/: dss-provisioner.yaml
examples/modules/multi-instance/modules/: pipelines.py
examples/modules/single-invocation/: dss-provisioner.yaml
examples/python_api/: README.md  app.py  dss-provisioner.yaml
examples/python_api/modules/: pipelines.py
examples/python_api/recipes/: prepare_features.py
src/dss_provisioner/: __init__.py  preview.py
src/dss_provisioner/cli/: __init__.py  commands.py  errors.py  formatting.py
src/dss_provisioner/config/: __init__.py  loader.py  modules.py  registry.py  schema.py
src/dss_provisioner/core/: __init__.py  project_scope.py  provider.py  state.py
src/dss_provisioner/engine/: __init__.py  code_env_handler.py  dataset_handler.py  engine.py  errors.py  exposed_object_handler.py  foreign_handler.py  git_library_handler.py  graph.py  handlers.py  lock.py  managed_folder_handler.py  operations.py  recipe_handler.py  registry.py  scenario_handler.py  types.py  variables.py  variables_handler.py  zone_handler.py
src/dss_provisioner/handlers/: __init__.py  base.py  datasets.py  projects.py  recipes.py  zones.py
src/dss_provisioner/resources/: __init__.py  base.py  code_env.py  dataset.py  exposed_object.py  foreign.py  git_library.py  loader.py  managed_folder.py  markers.py  recipe.py  scenario.py  variables.py  zone.py
tests/: __init__.py
tests/e2e/: conftest.py  test_dataset_e2e.py  test_engine_e2e.py  test_managed_folder_e2e.py  test_preview_e2e.py  test_recipe_e2e.py  test_scenario_e2e.py  test_variables_e2e.py  test_zone_e2e.py
tests/integration/: __init__.py  conftest.py  test_provider.py
tests/unit/: __init__.py  conftest.py  test_cli_commands.py  test_cli_formatting.py  test_code_env_handler.py  test_code_env_resource.py  test_config_api.py  test_config_loader.py  test_config_registry.py  test_dataset_handler.py  test_dataset_resource.py  test_engine_graph.py  test_engine_plan_apply.py  test_engine_refresh.py  test_engine_registry.py  test_exposed_object_handler.py  test_foreign_handler.py  test_git_library_handler.py  test_git_library_resource.py  test_loader.py  test_managed_folder_handler.py  test_managed_folder_resource.py  test_markers.py  test_modules.py  test_preview.py  test_provider.py  test_recipe_handler.py  test_recipe_resource.py  test_resource_validation.py  test_scenario_handler.py  test_scenario_resource.py  test_state_digest.py  test_variables_handler.py  test_variables_resource.py  test_zone_handler.py  test_zone_resource.py
