[project]
name = "dss-provisioner"
dynamic = ["version"]
description = "Terraform-style resource-as-code for Dataiku DSS"
readme = "README.md"
authors = [
    { name = "Jonas Meyer-Ohle", email = "19151471+jonas-meyer@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10",
    "python-dotenv>=1.0",
    "dataiku-api-client>=14.0",
    "ruamel-yaml>=0.18",
    "typer>=0.9",
    "rich>=13.0",
    "filelock>=3.20.3",
]

[project.scripts]
dss-provisioner = "dss_provisioner.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.14",
    "ty>=0.0.8",
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "keyring>=25.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.6",
    "mkdocstrings[python]>=0.29",
    "mike>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dss_provisioner"]

[tool.hatch.version]
path = "src/dss_provisioner/__init__.py"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ty.src]
include = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--strict-markers -m 'not integration'"
markers = [
    "integration: tests that require a real DSS instance (docker/notebook)",
    "enterprise: tests that require an enterprise DSS instance",
]

[tool.coverage.run]
source = ["src/dss_provisioner"]
branch = true

[tool.coverage.report]
exclude_also = ["pragma: no cover", "if TYPE_CHECKING", "@overload"]
fail_under = 85
show_missing = true
